force-app/main/default/objects/bt_stripe__Checkout_Submission__c/fields/bt_stripe__Error__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Error__c</fullName>
    <description>Any error encountered while processing the Checkout Submission (Cart) will be saved in this field.</description>
    <inlineHelpText>Any error encountered while processing the Checkout Submission (Cart) will be saved in this field.</inlineHelpText>
    <label>Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>