force-app/main/default/objects/bt_stripe__Checkout_Submission__c/fields/bt_stripe__Output_Payload__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Output_Payload__c</fullName>
    <description>The JSON payload output for the last Checkout Submission API save/submit for this record.</description>
    <inlineHelpText>The JSON payload output for the last Checkout Submission API save/submit for this record.</inlineHelpText>
    <label>Output Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>