force-app/main/default/objects/bt_stripe__Checkout_Submission__c/fields/bt_stripe__Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Status__c</fullName>
    <inlineHelpText>The status of this Checkout Submission. Draft = Cart that has not been submitted yet. Complete = Cart was submitted and a Sales Document was created. Error = Cart was submitted but a Sales Document could not be created.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>