force-app/main/default/objects/bt_stripe__Checkout_Submission__c/fields/conference360__Attendee_Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Status__c</fullName>
    <inlineHelpText>The status of if Attendees were processed (created/updated) successfully.</inlineHelpText>
    <label>Attendee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>