force-app/main/default/objects/bt_stripe__Checkout_Submission__c/fields/conference360__Process_Attendees__c.field-meta.xml
<CustomField>
    <fullName>conference360__Process_Attendees__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this box is checked, Attendee records in the payload will be processed. The box will be automatically unchecked after being &apos;checked&apos; and the Attendee Status field will be updated with the processing results.</inlineHelpText>
    <label>Process Attendees</label>
    <type>Checkbox</type>
</CustomField>